hphp/hack/test/requireclass/typing/requireclass_nonfinal_01.bad.php.exp
File "requireclass_nonfinal_01.bad.php", line 10, characters 7-7:
This class must be final because it uses a trait with a require class constraint. (Typing[4111])
  File "requireclass_nonfinal_01.bad.php", line 11, characters 7-7:
  The trait with a require class constraint is used here
  File "requireclass_nonfinal_01.bad.php", line 7, characters 17-17:
  The require class constraint is here
