hphp/hack/test/requireclass/typing/requireclass_nonfinal_01.bad.php
<?hh
// Copyright (c) Facebook, Inc. and its affiliates. All Rights Reserved.

<<file:__EnableUnstableFeatures('require_class')>>

trait T {
  require class C;
}

class C {
  use T;
}
